# DistributedATS

./: .gitignore  CMakeLists.txt
DataService/src/: AuthService.cpp  CMakeLists.txt  MarketDataService.cpp  OrderMassStatusRequestDataReaderListenerImpl.cpp  OrderMassStatusRequestService.cpp  RefDataService.cpp  main.cpp
FIXGateway/src/: Application.hpp  AuthServiceHelper.cpp  CMakeLists.txt  DataReaderContainer.h  DataWriterContainer.hpp  LogonDataReaderListenerImpl.cpp  SocketAcceptor.cpp  SocketAcceptor.h  SocketConnection.h  main.cpp
MatchingEngine/src/: CMakeLists.txt  Market.cpp  MarketDataSnapshotFullRefreshDataReaderListenerImpl.cpp  NewOrderSingleDataReaderListenerImpl.cpp  OrderCancelReplaceRequestDataReaderListenerImpl.cpp  OrderCancelRequestDataReaderListenerImpl.cpp  OrderException.cpp  OrderMassCancelRequestDataReaderListenerImpl.cpp  SecurityListDataReaderListenerImpl.cpp  main.cpp
MiscClients/cpp_ws_reactjs/fix_ws_proxy/: fixproxy.ini
MiscClients/cpp_ws_reactjs/webtrader_reactjs_ws/: package-lock.json
MiscClients/cpp_ws_reactjs/webtrader_reactjs_ws/src/: App.js
MiscClients/cpp_ws_reactjs/webtrader_reactjs_ws/src/components/: Helpers.js  History.js  Login.js  PositionsAndMarketData.js  PriceLevels.js  Ticket.js
MiscClients/cpp_ws_reactjs/webtrader_reactjs_ws/src/data_man/: DataMan.js  OrderMan.js  PositionMan.js
MiscClients/cpp_ws_reactjs/webtrader_reactjs_ws/src/websocket_fix_utils/: FIXMessageHandler.js
MiscClients/spring_reactjs/: pom.xml
MiscClients/spring_reactjs/src/main/java/org/DistributedATS/WebTraderRest/quickfix/: FIXApplication.java
MiscClients/spring_reactjs/src/main/resources/: fixclient.cfg
MiscClients/spring_reactjs/webtrader_reactjs/: package-lock.json
MiscClients/spring_reactjs/webtrader_reactjs/src/: App.js
MiscClients/spring_reactjs/webtrader_reactjs/src/components/: SessionStateWrapper.js
TestSuiteJ/logs/: FIX.4.4-TRADER_3-FIX_GWY_1.body  FIX.4.4-TRADER_3-FIX_GWY_1.header  FIX.4.4-TRADER_3-FIX_GWY_1.session
docker/: fixproxy.ini
